tooling/tree-sitter-pyxis/test/corpus/minimal.txt
================================================================================
Minimal
================================================================================

type Empty {}

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    body: (type_body)))
